# WeatherForecast

./: .gitignore  .replit  LOCALHOST_SETUP.md  QUICK_START.md  README.md  WINDOWS_SETUP.md  add_sample_documents.py  analyze_unused_fields.py  analyze_unused_routes.py  app.py  check_actual_table_names.py  check_all_forms_schema_issues.py  check_voucher_types.py  cli.py  cli_permissions.py  comprehensive_cleanup_analysis.md  configure_castor_bom_uom.py  cookies.txt  create_approval_sample_data.py  create_basic_sample_data.py  create_batch_sample_data.py  create_bom_tree_sample_data.py  create_complete_workflow_data.py  create_missing_batch_movements.py  create_multistate_examples.py  create_sample_data.py  create_sample_data.sql  create_sample_dynamic_fields.py  create_test_batch_data.py  debug_jobwork.py  demo_logical_flow.py  final_route_cleanup_summary.md  final_voucher_id_verification.py  fix_admin_login.py  fix_bom_codes.py  fix_bom_inventory_update.py  fix_bom_processes_schema.py  fix_database.py  fix_final_inventory_views.py  fix_grn_inspection_logic.py  (+92 more)
attached_assets/: Pasted--Got-it-Here-s-how-to-structure-your-Flask-Factory-Management-App-so-that-each-section-modu-1753177414373_1753177414374.txt  Pasted--Job-Work-Report-screen-it-shows-a-clean-table-with-Job-Numbers-Item-Name-Quan-1753612345786_1753612345787.txt  Pasted--Parent-is-PO-or-Job-Work-and-GRNs-are-created-as-you-receive-items-here-s-how-your-Paren-1754042693655_1754042693656.txt  Pasted--centralized-Settings-section-and-how-it-controls-your-multi-company-ERP-system--1754170470665_1754170470666.txt  (+41 more)
routes/: accounting.py  accounting_advanced_reports.py  accounting_settings.py  admin.py  hr.py  (+43 more)
(+221 files in other folders)
