[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.41",
    "flask-login>=0.6.3",
    "click>=8.2.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "oauthlib>=3.3.1",
    "twilio>=9.6.5",
    "sendgrid>=6.12.4",
    "schedule>=1.2.2",
    "weasyprint>=65.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "rectpack>=0.2.2",
    "pytesseract>=0.3.13",
    "pillow>=11.3.0",
    "opencv-python>=4.12.0.88",
    "python-dateutil>=2.9.0.post0",
    "pymupdf>=1.26.3",
    "fitz>=0.0.1.dev2",
]
